Enable vulerability alerts from OSV
See https://osv.dev/

See https://docs.renovatebot.com/configuration-options/#osvvulnerabilityalerts

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -65,6 +65,8 @@
     },
   ],
 
+  osvVulnerabilityAlerts: true,
+
   // Max 50 PRs in total, 10 per hour
   prConcurrentLimit: 50,
   prHourlyLimit: 2,
